<resources>
    <string name="app_name">Pyrotek PPE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="parse_application_id">itkvEYvutCuhZC0kNGOphf4RLfHGigl2bsJM9j4o</string>
    <string name="parse_client_key">ibSbc60kt5qkJIxv5FuITkILWXyuUMwOn4caGsKo</string>
    <string name="Products">Products</string>
    <string name="Search">Search</string>
    <string name="News">News</string>
    <string name="Settings">Settings</string>
    <string name="Material">Material</string>
    <string name="Description">Description</string>
    <string name="Sned_Enquiry">Send an Enquiry!</string>
    <string name="Search_A_Product">Search a Product</string>
    <string name="size">Size</string>
    <string name="metric_cm">Metric (cm)</string>
    <string name="size_colon">Size: </string>
    <string name="available_colors">Available Colors: </string>
    <string name="available_forms">Available forms: </string>
    <string name="register_and_stay_update">Register &amp; stay updated</string>
    <string name="your_name">Your Name</string>
    <string name="official_email">Official Email ID</string>
    <string name="company_name">Company Name</string>
    <string name="register">Register</string>
    <string name="register_error">Unable to Update. Please try again later …</string>
    <string name="update_error">Unable to Update. Please try again later …</string>
    <string name="update_dialog_message">Updating your profile.Please wait …</string>
    <string name="register_dialog_message">Registering New User. Please wait …"</string>
    <string name="register_dialog_message_success">Registration successful.."</string>
    <string name="update_dialog_message_success">Profile updated successfully.."</string>
    <string name="skip">Skip</string>
    <string name="alert">Alert !</string>
    <string name="company_name_error">Please enter Company Name</string>
    <string name="official_email_error">Please enter your Official Email ID</string>
    <string name="name_error">Please enter your Name</string>
    <string name="my_profile">My Profile</string>
    <string name="update">Update</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="no_products_found">No Products Found</string>
    <string name="no_internet_or_error">Error! while fetching data. Please check your Internet Connection or try again later.</string>


    <string name="Temp">Leather or aramid palm, heat-resistant plastic film- coated foil covered aramid back, aramid felt cuff and wool liner.</string>

</resources>
