<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_and_stay_update"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edtYourName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/your_name"/>

    <EditText
        android:id="@+id/edtOfficialEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/official_email"/>
    <EditText
        android:id="@+id/edtCompanyName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@color/red_selected"/>

    <TextView
        android:id="@+id/txtSkip"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/skip"
        android:textSize="16sp"/>

</LinearLayout>