<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linCompanyBannerContainer"
        android:background="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="right|center_vertical"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/imgProductBanner"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/linCompanyBannerContainer"
        android:layout_above="@+id/linBottomButtonContainer">

        </FrameLayout>

    <LinearLayout
        android:id="@+id/linBottomButtonContainer"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/linProducts"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/products"/>
            <TextView
                android:id="@+id/txtProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:text="@string/Products"
                android:textSize="12sp"/>
        </LinearLayout>

        <!--<Button
            android:id="@+id/btnProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/products"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/Settings"/>-->
        <LinearLayout
            android:id="@+id/linSearch"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/search"/>
            <TextView
                android:id="@+id/txtSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:text="@string/Search"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linNews"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/news"/>
            <TextView
                android:id="@+id/txtNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:text="@string/News"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linSetting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/settings"/>
            <TextView
                android:id="@+id/txtSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/white"
                android:text="@string/Settings"
                android:textSize="12sp"/>
        </LinearLayout>

        <!--<Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/search"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/Search"/>

        <Button
            android:id="@+id/btnNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/news"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/News"/>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:drawableTop="@drawable/settings"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/Settings"/>-->
        </LinearLayout>

</RelativeLayout>
